Seem to have resolved issues with JOOQ and GraalVM native image.
Got further, moving on to the next failure in the sql state machine