@@ -116,10 +116,29 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <buildArgs>
+                  <agent>
+                    <enabled>true</enabled>
+                    <options><!-- shared options -->
+                        <option>experimental-class-loader-support</option>
+                    </options>
+                    <options name="periodic-config"><!-- periodic-config options -->
+                        <option>config-write-period-secs=5</option>
+                        <option>config-write-initial-delay-secs=5</option>
+                    </options>
+                  </agent>
+                    <buildArgs> 
+                     --initialize-at-build-time=org.jooq
                      --initialize-at-build-time=javax.sql.rowset.RowSetProvider
                      --initialize-at-build-time=org.slf4j.LoggerFactory
                      --initialize-at-build-time=ch.qos.logback
+                     --initialize-at-run-time=org.jooq.impl.Convert$_JSON
+                     --initialize-at-run-time=org.jooq.tools.Convert
+                     --initialize-at-run-time=org.jooq.impl.Convert$_XML
+                     --initialize-at-run-time=org.jooq.impl.DefaultRenderContext
+                     --add-modules java.sql.rowset
+                     --trace-object-instantiation=com.fasterxml.jackson.databind.ObjectMapper
+                     --trace-class-initialization=jakarta.xml.bind.ContextFinder
+                     --trace-class-initialization=org.slf4j.MDC
                      </buildArgs>
                     <isDetectionRestrictedToModuleDependencies>false</isDetectionRestrictedToModuleDependencies>
                     <debug>true</debug>
